--- a/1.section/package.json
+++ b/1.section/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "scripts": {
     "start": "node app.js"
