--- a/1.section/package.json
+++ b/1.section/package.json
@@ -7,7 +7,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "winston": "^3.11.0"
   },
   "scripts": {
     "start": "node app.js"
