--- a/1.section/package.json
+++ b/1.section/package.json
@@ -9,6 +9,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
     "winston": "^3.11.0"
