--- a/1.section/package.json
+++ b/1.section/package.json
@@ -11,7 +11,8 @@
     "express": "^4.18.2",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.5",
+    "mysql2": "^3.9.0",
+    "util": "^0.12.5",
     "winston": "^3.11.0"
   },
   "scripts": {
