--- a/project/front/package.json
+++ b/project/front/package.json
@@ -9,8 +9,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.46.0",
     "intersection-observer": "^0.12.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-datepicker": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
