--- a/1.section/package.json
+++ b/1.section/package.json
@@ -12,6 +12,7 @@
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.0",
+    "nodemailer": "^6.9.10",
     "util": "^0.12.5",
     "winston": "^3.11.0"
   },
