--- a/1.section/package.json
+++ b/1.section/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.0",
     "nodemailer": "^6.9.10",
     "util": "^0.12.5",
