--- a/project/front/package.json
+++ b/project/front/package.json
@@ -19,6 +19,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
